--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,49 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
-	<TextView
-        android:id="@+id/gpstv"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="GPS: warming up"
-        android:textSize="16dp" 
-	/>
-	
-	<TextView
-        android:id="@+id/acceltv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Accelerometer:"
-        android:textSize="16dp" 
-	/>
-	
-		<TextView
-        android:id="@+id/direct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:textSize="16dp" 
-	/>
-	
-	<Button
-	    android:id="@+id/gobutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Next"
-        android:textSize="16dp" 
-	/>
-	
-	    <edu.elon.cs.collection.CompassView
-        android:id="@+id/compass"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/direct"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.55"
+                android:padding="8dp"
+                android:textSize="16dp" />
+
+
+            <Button
+                android:id="@+id/gobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.29"
+                android:padding="8dp"
+                android:text="Next"
+                android:textSize="16dp" />
+
+        </LinearLayout>
+
+
+
+	<LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/compass"
-        />
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="1" >
+	
+
+        <edu.elon.cs.collection.CompassView
+            android:id="@+id/compass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/compass" />
+       
+    </LinearLayout>
 
 </LinearLayout>
